--- a/src/main/resources/theYakuzaResources/localization/zhs/YakuzaMod-Keyword-Strings.json
+++ b/src/main/resources/theYakuzaResources/localization/zhs/YakuzaMod-Keyword-Strings.json
@@ -1,102 +1,110 @@
 [
   {
+    "PROPER_NAME": "小游戏",
     "NAMES": [
+      "小游戏",
       "minigame",
       "minigames",
       "Minigame",
-      "Minigames",
-      "小游戏"
+      "Minigames"      
     ],
     "DESCRIPTION": "随机触发 #b1 项效果: NL - 获得 #b3 点 #y格挡。 NL - 随机敌人失去 #b5 点生命。 NL - 抽 #b1 张牌。 NL - 对随机敌人施加 #b1 层 #y虚弱 和 #y易伤 。 NL - 本回合获得 #b1 点 #y力量 和 #y敏捷 。 NL - 下回合额外抽 #b1 张牌。 NL - 下回合额外获得 [E] 。 NL - 获得 #b3 层 #y活力 。 NL - 获得 #b1 点临时生命。 NL - 随机敌人获得 #b1 层 #y勒脖 。"
   },
   {
+    "PROPER_NAME": "拓展",
     "NAMES": [
+      "拓展",
       "improved",
-      "improved",
-      "improved",
-      "improved",
-      "拓展"
+      "Improved"
     ],
     "DESCRIPTION": "拓展小游戏列表: NL - 随机手牌本回合耗能降低 #b1 点。 NL - 获得 #b1 层 #y多层护甲 和 #y金属化 。 NL - 获得 #b2 层 #y荆棘 。 NL - 获得 #b1 层 #y复仇 。 NL - 获得 #b1 层 #y躲闪 。 NL - 随机升级一张手牌。 NL - 获得 #b1 层 #y人工制品 。 NL - 随机将一张带 #y抹除 和 #y虚无 的任意颜色的普通牌加入手牌。 NL - 获得1瓶爆炸药水。 NL - 随机将一张带 #y抹除 的普通 #y小游戏 牌加入手牌。"
   },
   {
+    "PROPER_NAME": "耐久度",
     "NAMES": [
-      "durability",
+      "耐久度",
       "Durability",
-      "耐久度"
+      "durability"
     ],
     "DESCRIPTION": "每次打出攻击或技能牌消耗 #b1 耐久度。 NL 当耐久度为 #b0 时，道具损坏。"
   },
   {
+    "PROPER_NAME": "抓取",
     "NAMES": [
-      "grab",
+      "抓取",
       "Grab",
-      "抓取"
+      "grab"
     ],
     "DESCRIPTION": "装备道具可以强化攻击和技能牌的效果。 每次使用消耗 #b1 耐久度。 在损坏前抓取新道具时，会将之前的道具 投掷 。"
   },
   {
+    "PROPER_NAME": "热血值",
     "NAMES": [
-      "Heat ",
+      "热血值",
       "heat",
-      "热血值"
+      "Heat"
     ],
     "DESCRIPTION": "每层热血值使造成的伤害提高 #b2 点，获得的格挡提高 #b1 点，至多 #b3 层。 失去生命时降低 #b1 层。"
   },
   {
-    "PROPER_NAME": "Traffic Cone",
+    "PROPER_NAME": "路障",
     "NAMES": [
-      "Traffic Cone",
+      "路障",
       "Traffic_Cone",
       "traffic_cone",
-      "路障"
+      "Traffic Cone"
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b2 点。 NL #y技能牌 :获得 #b3 点格挡。 NL #y投掷 :对随机敌人造成 #b5+耐久度 点伤害。 NL #y耐久度 #b3 。"
   },
   {
-    "PROPER_NAME": "Traffic Cone+",
+    "PROPER_NAME": "路障+",
     "NAMES": [
-      "Traffic Cone+",
+      "路障+",
       "Traffic_Cone+",
       "traffic_cone+",
-      "路障+"
+      "Traffic Cone+"
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b3 点。 NL #y技能牌 :获得 #b5 点格挡。 NL #y投掷 :对随机敌人造成 #b8+耐久度 点伤害。 NL #y耐久度 #b3 。"
   },
   {
+    "PROPER_NAME": "双截棍",
     "NAMES": [
-      "nunchaku",
+      "双截棍",
       "Nunchaku",
-      "双截棍"
+      "nunchaku"
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b3 点。获得 #b3 点格挡。 NL #y技能牌 :获得 #b4 点格挡。 NL #y投掷 :对随机敌人造成 #b6 点伤害。 NL #y耐久度 #b4 。"
   },
   {
+    "PROPER_NAME": "双截棍+",
     "NAMES": [
-      "nunchaku+",
+      "双截棍+",
       "Nunchaku+",
-      "双截棍+"
+      "nunchaku+"
 	  
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b5 点。获得 #b5 点格挡。 NL #y技能牌 :获得 #b6 点格挡。 NL #y投掷 :对随机敌人造成 #b9 点伤害。 NL #y耐久度 #b4 。"
   },
   {
+    "PROPER_NAME": "球棒",
     "NAMES": [
-      "bat",
+      "球棒",
       "Bat",
-      "球拍"
+      "bat"
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b2X 点。 NL #y技能牌 :获得 #bX 点格挡。 NL #y投掷 :对随机敌人造成 #bX倍耐久度 点伤害。 NL #y耐久度 #b3。 NL #bX 为升级次数。"
   },
   {
+    "PROPER_NAME": "平底锅",
     "NAMES": [
-      "pan",
+      "平底锅",
       "Pan",
-      "平底锅"
+      "pan"
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b1 点。 NL #y技能牌 :获得 #b耐久度 点格挡。 NL #y投掷 : #y投掷 :对生命值最高的没有格挡的敌人施加 #b耐久度 层虚弱。 NL #y耐久度 #b5 。"
   },
   {
+    "PROPER_NAME": "平底锅+",
     "NAMES": [
       "pan+",
       "Pan+",
@@ -105,54 +113,61 @@
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b1 点。 NL #y技能牌 :获得 #b耐久度 点格挡。 NL #y投掷 : #y投掷 :对生命值最高的敌人施加 #b耐久度 层虚弱。 NL #y耐久度 #b8 。"
   },
   {
+    "PROPER_NAME": "酒",
     "NAMES": [
-      "sake",
+      "酒",
       "Sake",
-      "酒"
+      "sake"
     ],
     "DESCRIPTION": " #y攻击牌 :获得 #b1 点力量。 NL #y技能牌 :获得 #b1 点敏捷。 NL #y投掷 :获得 #b耐久度 层多层护甲。 NL #y耐久度 #b2 。"
   },
   {
+    "PROPER_NAME": "酒+",
     "NAMES": [
-      "sake+",
+      "酒+",
       "Sake+",
-      "酒+"
+      "sake+"
     ],
     "DESCRIPTION": " #y攻击牌 :获得 #b1 点力量。 NL #y技能牌 :获得 #b1 点敏捷。 NL #y投掷 :获得 #b耐久度 层多层护甲。 NL #y耐久度 #b3 。"
   },
   {
+    "PROPER_NAME": "左轮",
     "NAMES": [
-      "revolver",
+      "左轮",
       "Revolver",
-      "左轮"
+      "revolver"
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b4 点。 Apply #b1 Vulnerable to ALL enemies. NL #y技能牌 : No effect. NL #y投掷 : Deal #b0 damage to a random enemy. NL #y耐久度 #b3 。"
   },
   {
+    "PROPER_NAME": "左轮+",
     "NAMES": [
-      "revolver+",
+      "左轮+",
       "Revolver+",
-      "左轮+"
+      "revolver+"
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b7 点。 Apply #b1 Vulnerable to ALL enemies. NL #y技能牌 : No effect. NL #y投掷 : Deal #b0 damage to a random enemy. NL #y耐久度 #b3 。"
   },
   {
+    "PROPER_NAME": "单车",
     "NAMES": [
-      "bike",
+      "单车",
       "Bike",
-      "单车"
+      "bike"
     ],
     "DESCRIPTION": " #y攻击牌 :所有敌人额外失去 #b6 点生命。 NL #y技能牌 :获得 #b7 点格挡。 NL #y投掷 :对所有敌人造成 #b8倍耐久度 的伤害。 NL #y耐久度 #b2 。"
   },
   {
+    "PROPER_NAME": "单车+",
     "NAMES": [
-      "bike+",
+      "单车+",
       "Bike+",
-      "单车+"
+      "bike+"
     ],
     "DESCRIPTION": " #y攻击牌 :所有敌人额外失去 #b8 点生命。 NL #y技能牌 :获得 #b9 点格挡。 NL #y投掷 :对所有敌人造成 #b10倍耐久度 的伤害。 NL #y耐久度 #b2 。"
   },
   {
+    "PROPER_NAME": "拉面",
     "NAMES": [
       "ramen",
       "Ramen",
@@ -161,180 +176,187 @@
     "DESCRIPTION": " #y攻击牌 :抽 #b1 张牌。 NL #y技能牌 :预见 #b2 。 NL #y投掷 :消耗至多 #b耐久度 张手牌。 NL #y耐久度 #b1 。"
   },
   {
+    "PROPER_NAME": "铁尺",
     "NAMES": [
-      "sais",
+      "铁尺",
       "Sais",
-      "铁尺"
+      "sais"
     ],
     "DESCRIPTION": " #y攻击牌 :获得 #b2 点临时敏捷 。 NL #y技能牌 :获得 #b2 点临时力量。 NL #y投掷 :获得 #b耐久度 层躲闪。 NL #y耐久度 #b3 。"
   },
   {
+    "PROPER_NAME": "铁尺+",
     "NAMES": [
-      "sais+",
+      "铁尺+",
       "Sais+",
-      "铁尺+"
+      "sais+"
     ],
     "DESCRIPTION": " #y攻击牌 :获得 #b3 点临时敏捷 。 NL #y技能牌 :获得 #b3 点临时力量。 NL #y投掷 :获得 #b耐久度 层躲闪。 NL #y耐久度 #b3 。"
   },
   {
+    "PROPER_NAME": "摩托车",
     "NAMES": [
-      "motorcycle",
+      "摩托车",
       "Motorcycle",
-      "摩托车"
+      "motorcycle"
     ],
     "DESCRIPTION": " #y攻击牌 :对所有敌人造成一半伤害值的生命流失 #b1 次。 NL #y技能牌 :本回合阻止下 #b1 次即将受到的生命损失。 NL #y投掷 :对所有敌人造成 #b12倍耐久度 点伤害。 NL #y耐久度 #b2 。"
   },
   {
+    "PROPER_NAME": "摩托车+",
     "NAMES": [
-      "motorcycle+",
+      "摩托车+",
       "Motorcycle+",
-      "摩托车+"
+      "motorcycle+"
     ],
     "DESCRIPTION": " #y攻击牌 :对所有敌人造成全额伤害值的生命流失 #b1 次。 NL #y技能牌 :本回合阻止下 #b1 次即将受到的生命损失。 NL #y投掷 :对所有敌人造成 #b18倍耐久度 点伤害。 NL #y耐久度 #b3 。"
   },
   {
-    "PROPER_NAME": "Komaki Technique",
+    "PROPER_NAME": "古牧流招式",
     "NAMES": [
-      "Komaki Technique",
+      "古牧流招式",
       "komaki_technique",
       "Komaki_Technique",
-      "古牧流招式"
+      "Komaki Technique"
     ],
     "DESCRIPTION": "卡牌奖励中只会出现一种古牧流招式。请谨慎选择。"
   },
   {
-    "PROPER_NAME": "Nameless Katana",
+    "PROPER_NAME": "无名刀",
     "NAMES": [
-      "Nameless Katana",
+      "无名刀",
       "nameless_katana",
       "Nameless_Katana",
-      "无名刀"
+      "Nameless Katana"
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b3 点。如果你没有格挡，效果翻倍。 NL #y技能牌 :获得 #b1 点格挡。 NL #y投掷 :对生命值最高的没有格挡的敌人施加 #b2倍耐久度 层易伤。 NL #y耐久度 #b3 。"
   },
   {
-    "PROPER_NAME": "Nameless Katana+",
+    "PROPER_NAME": "无名刀+",
     "NAMES": [
-      "Nameless Katana+",
+      "无名刀+",
       "nameless_katana+",
       "Nameless_Katana+",
-      "无名刀+"
+      "Nameless Katana+"
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b5 点。如果你没有格挡，效果翻倍。 NL #y技能牌 :获得 #b1 点格挡。 NL #y投掷 :对生命值最高的敌人施加 #b2倍耐久度 层易伤。 NL #y耐久度 #b3 。"
   },
   {
-    "PROPER_NAME": "Broken Pipe",
+    "PROPER_NAME": "破管道",
     "NAMES": [
-      "Broken Pipe",
+      "破管道",
       "Broken_Pipe",
       "broken_pipe",
-      "破管道"
+      "Broken Pipe"
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b2 点。 NL #y技能牌 :获得 #b2 点格挡。 NL #y投掷 :对随机敌人造成 #b耐久度 点伤害。 NL #y耐久度 #b2 。"
   },
   {
-    "PROPER_NAME": "Broken Pipe+",
+    "PROPER_NAME": "破管道+",
     "NAMES": [
-      "Broken Pipe+",
+      "破管道+",
       "Broken_Pipe+",
       "broken_pipe+",
-      "破管道+"
+      "Broken Pipe+"
 
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b3 点。 NL #y技能牌 :获得 #b3 点格挡。 NL #y投掷 :对随机敌人造成 #b耐久度 点伤害。 NL #y耐久度 #b2 。"
   },
   {
-    "PROPER_NAME": "Iron Knucles",
+    "PROPER_NAME": "铁指虎",
     "NAMES": [
-      "Iron Knuckles",
+      "铁指虎",
       "Iron_Knuckles",
       "iron_knuckles",
-      "铁指虎"
+      "Iron Knuckles"
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b3 点。 NL #y技能牌 :获得 #b2 点格挡。 NL #y投掷 :对随机敌人造成 #b耐久度 点伤害。 NL #y耐久度 #b3 。"
   },
   {
-    "PROPER_NAME": "Iron Knuckles+",
+    "PROPER_NAME": "铁指虎+",
     "NAMES": [
-      "Iron Knuclkes+",
+      "铁指虎+",
       "Iron_Knuclkes+",
       "iron_knuckles+",
-      "铁指虎+"
+      "Iron Knuclkes+"
     ],
     "DESCRIPTION": " #y攻击牌 :伤害提高 #b5 点。 NL #y技能牌 :获得 #b4 点格挡。 NL #y投掷 :对随机敌人造成 #b耐久度 点伤害。 NL #y耐久度 #b3 。"
   },
   {
+    "PROPER_NAME": "耐力饮料",
     "NAMES": [
-      "Staminan",
+      "耐力饮料",
       "staminan",
-      "耐力饮料"
+      "Staminan"
     ],
     "DESCRIPTION": " #y攻击牌 :获得 #b1 层热血值。 NL #y技能牌 :回复 #b2 点生命。 NL #y投掷 :获得 #b耐久度 [E] 。 NL #y耐久度 #b2 。"
   },
   {
-    "PROPER_NAME": "Staminan Royale",
+    "PROPER_NAME": "浓缩耐力饮料",
     "NAMES": [
-      "Staminan Royale",
+      "浓缩耐力饮料",
       "staminan royale",
       "staminan_royale",
       "Staminan_Royale",
-      "浓缩耐力饮料"
+      "Staminan Royale"
     ],
     "DESCRIPTION": " #y攻击牌 :获得 #b1 层热血值。 NL #y技能牌 :回复 #b2 点生命。 NL #y投掷 :获得 #b耐久度 [E] 。 NL #y耐久度 #b4 。"
   },
   {
-    "PROPER_NAME": "Demonfire Dagger",
+    "PROPER_NAME": "魔焰匕首",
     "NAMES": [
-      "Demonfire Dagger",
+      "魔焰匕首",
       "Demonfire_Dagger",
       "demonfire_dagger",
-      "魔焰匕首"
+      "Demonfire Dagger"
     ],
     "DESCRIPTION": " #y攻击牌 :增加1点计数，每点计数提高攻击伤害 #b2 点。 NL #y技能牌 :抽 #b计数 张牌并重置计数。 NL #y投掷 :对随机敌人造成 #b99-耐久度 点伤害。 NL #y耐久度 #b99 。"
   },
   {
-    "PROPER_NAME": "Demonfire Dagger+",
+    "PROPER_NAME": "魔焰匕首+",
     "NAMES": [
-      "Demonfire Dagger+",
+      "魔焰匕首+",
       "Demonfire_Dagger+",
       "demonfire_dagger+",
-      "魔焰匕首+"
+      "Demonfire Dagger+"
     ],
     "DESCRIPTION": " #y攻击牌 :增加1点计数，每点计数提高攻击伤害 #b3 点。 NL #y技能牌 :抽 #b计数 张牌并重置计数。 NL #y投掷 :对随机敌人造成 #b99-耐久度 点伤害。 NL #y耐久度 #b99 。"
   },
   {
-    "PROPER_NAME": "Dragon Kart",
+    "PROPER_NAME": "龙车",
     "NAMES": [
-      "Dragon Kart",
+      "龙车",
       "Dragon_Kart",
       "dragon_kart",
-      "龙车"
+      "Dragon Kart"
     ],
     "DESCRIPTION": " #y攻击牌 :玩 #y小游戏 #b2 次。 NL #y技能牌 :玩 #y小游戏 #b2 次。 NL #y投掷 :玩 #y小游戏 #b1+耐久度 次。 NL #y耐久度 #b2 。"
   },
   {
-    "PROPER_NAME": "Dragon Kart+",
+    "PROPER_NAME": "龙车+",
     "NAMES": [
-      "Dragon Kart+",
+      "龙车+",
       "Dragon_Kart+",
       "dragon_kart+",
-      "龙车+"
+      "Dragon Kart+"
     ],
     "DESCRIPTION": " #y攻击牌 : 玩 #y小游戏 #b2 次。 NL #y技能牌 : 玩 #y小游戏 #b2 次。 NL #y投掷 : 玩 #y小游戏 #b1+耐久度 次。 NL #y耐久度 #b3 。"
   },
   {
+    "PROPER_NAME": "复仇",
     "NAMES": [
-      "retaliate",
+      "复仇",
       "Retaliate",
-      "复仇"
+      "retaliate"
     ],
     "DESCRIPTION": "回合开始时，从抽牌堆随机打出 #y复仇 层数张攻击牌。"
   },
   {
+    "PROPER_NAME": "躲闪",
     "NAMES": [
-      "weave",
+      "躲闪",
       "Weave",
-      "躲闪"
+      "weave"
     ],
     "DESCRIPTION": "阻止本回合下次即将受到的生命损失。"
   },
